fix criteria columns on mobile

--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -148,7 +148,7 @@ $success-red: #ff7455;
 }
 
 @media only screen and (max-width: 700px) {
-  #criteria-list {
+  .criteria-list {
     column-count: 2;
   }
 
